#1429406 - can't use Integer.valueOf from 1.5 yet
git-svn-id: https://pmd.svn.sourceforge.net/svnroot/pmd/trunk@4228 51baf565-9d33-0410-a72c-fc3788e3496d